# ffmpeg-build

./: CMakeLists.txt  CMakeLists.txt.BAK  build-linux.sh  common.sh
.github/workflows/: build-native.yml  build-v2.yml  build-wrapper.yml  build.yml
wrapper_src/: soundflow_ffmpeg.c  soundflow_ffmpeg.h
